Policies/fqdnexample.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mediabot
  labels:
    org: empire
    class: mediabot3
spec:
  containers:
  - name: mediabot
    image: docker.io/tgraf/netperf
