Policies/egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "denyall"
spec:
  endpointSelector:
    matchLabels:
      org: alliance
      class: xwing
  role: restricted
  egress:
  - {}
