Policies/egress2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow"
spec:
  endpointSelector:
    matchLabels:
      org: alliance
  egress:
  - toServices:
      - {}
  - toPorts:
      - {}
