Policies/egress3.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "denyall2"
spec:
  endpointSelector:
    matchLabels:
      org: alliance
  role: restricted
  egress:
  - {}
