Policies/fqdn2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fqdncustom"
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: mediabot3
  egress:
  - toFQDNs:
    - matchPattern: "*.twitter.com"
    - matchPattern: "*.google.com"
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.twitter.com"
